--- a/css/style.css
+++ b/css/style.css
@@ -475,6 +475,10 @@ background-color: var(--w);
     width: 100%;
     height: 500px;
      object-fit: cover;
+     object-position: top;
+     opacity: 1;
+     font-size: 14px;
+     
     
 }
 
