--- a/css/style.css
+++ b/css/style.css
@@ -474,7 +474,11 @@ background-color: var(--w);
     display: block;
     width: 100%;
     height: 500px;
-     object-fit: cover;
+    object-fit: cover;
+    margin: 0;
+    padding: 0;
+    top: 0;
+
     
 }
 
