--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,12 @@ header
 {
     margin-top: 5px;
 }
+.mainheader
+{
+    display: flex;
+    justify-content: space-between;
+}
+
 .navbar
 {
     display: flex;
@@ -78,43 +84,46 @@ header
     align-items: center;
 
 }
-.navbar-menu{
+
+.navbar-menu
+{
     display: flex;
+    margin: 0px;
+    padding: 0px;
     flex-direction: row;
-    justify-content:space-between;
+    justify-content:space-between ;
     align-items: center;
 }
-.navbar-item
-{
-    display: inline-block;
+
+.navbar-item {
+    display: flex;
+    margin: 10px 22px;
     text-decoration: none;
     text-transform: uppercase;
-   padding: 5px 20px;
     list-style-type: none;
-}
-.navbar-link
-{
-    color: var(--text-color);
     font-weight: 600;
 }
-.navbar-link:hover
+
+.mini-item a,.navbar-item a,.connect-item a 
 {
     color: var(--text-color);
+}
+.navbar-handler{
+    background-color: var(--primary);
+    margin: 10px 0px;
+    display: none;
+}
+.navbar-handler img{
+    width: 30px;
 }
 .connect{
     margin-top: 10px;
 }
-.connect-menu
-{
-    display: flex;
-    flex-direction: row;
-    justify-content:space-between ;
-    align-items: center;
-    margin: 0px;
-}
+
 .connect-item
 {
     display: flex;
+    margin: 10px 10px;
     text-decoration: none;
     text-transform: uppercase;
     list-style-type: none;
@@ -132,12 +141,13 @@ header
 {
     color: var(--primary);
 }
+
 .header-btn
 {
     cursor: pointer;
     text-decoration: none;
     text-align: center;
-    color: white;
+    color: white !important;
     background-color:var(--primary) ;
     text-transform: uppercase;
     padding: 5px 20px;
@@ -475,15 +485,6 @@ background-color: var(--w);
     width: 100%;
     height: 500px;
     object-fit: cover;
-    margin: 0;
-    padding: 0;
-    top: 0;
-     object-fit: cover;
-     object-position: top;
-     opacity: 1;
-     font-size: 14px;
-     
-    
 }
 
 /* ===================================================== */
@@ -731,11 +732,17 @@ iframe {
 /*Mobile Devices*/
 @media screen and (max-width:519px) and (min-width:320px) { 
 
-    .mini-menu , .navbar
+    .mini-menu 
     {
-        visibility: hidden;
+        display: none;
     }
-
+    
+    .navbar-handler
+{
+    display: block;
+    float:left
+    
+}
     .logo-row img {
         width: 4rem;
         height: auto;
@@ -757,88 +764,6 @@ iframe {
 }
 
 }
-
-
-
-.ahsan {
-    margin-top: 17px;
-    display: flex;
-    justify-content: center;
-}
-.mainheader
-{
-    display: flex;
-    justify-content: space-between;
-}
-.mini-menu
-{
-    display: flex;
-    margin: 0px;
-    padding: 0px;
-    flex-direction: row;
-    justify-content:space-between ;
-    align-items: center;
-}
-
-.navbar-menu
-{
-    display: flex;
-    margin: 0px;
-    padding: 0px;
-    flex-direction: row;
-    justify-content:space-between ;
-    align-items: center;
-}
-
-.mini-item
-{
-    display: flex;
-    margin: 10px 0;
-    text-decoration: none;
-    text-transform: uppercase;
-    list-style-type: none;
-}
-
-.navbar-item
-{
-    display: flex;
-    margin: 10px 10px;
-    text-decoration: none;
-    text-transform: uppercase;
-    list-style-type: none;
-}
-.connect-item
-{
-    display: flex;
-    margin: 10px 6px;
-    text-decoration: none;
-    text-transform: uppercase;
-    list-style-type: none;
-}
-.mini-item a,.navbar-item a,.connect-item a 
-{
-    color: var(--text-color);
-}
-.header-btn
-{
-    cursor: pointer;
-    text-decoration: none;
-    text-align: center;
-    color: white !important;
-    background-color:var(--secondary) ;
-    text-transform: uppercase;
-    padding: 5px 20px;
-    font-weight: 600;
-}
-.navbar-handler{
-    background-color: var(--primary);
-    display: none;
-}
-.navbar-handler img{
-    width: 30px;
-}
-
-
 
 /*Tablet Devices*/
 @media screen and (max-width:991px) and (min-width:519px) { 
